# fs_wrapper

./: .gitignore  .travis.yml  CMakeLists.txt  FileReplacerUtils.cpp  FileReplacerUtils.h  Makefile  README.md  fs_async_wrapper.cpp  fs_async_wrapper.h  fs_default_os_wrapper.cpp  fs_retain_vars.cpp  fs_retain_vars.h  fs_sync_wrapper.cpp  fs_sync_wrapper.h  fs_wrapper_utils.cpp  fs_wrapper_utils.h
include/: FileReplacerUtils.h  fs_retain_vars.h  fs_sync_wrapper.h
include/fswrapper/: FileReplacerUtils.h  fs_async_wrapper.h  fs_default_os_wrapper.h  fs_retain_vars.h  fs_sync_wrapper.h  fs_wrapper_utils.h
other/: devkitPPCupdatePPCr29.pl
source/: FileReplacerUtils.cpp  fs_async_wrapper.cpp  fs_default_os_wrapper.cpp  fs_retain_vars.cpp  fs_sync_wrapper.cpp  fs_wrapper_utils.cpp
